--- a/NSLKDD_LSTM_Model.ipynb
+++ b/NSLKDD_LSTM_Model.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "16_X2LMa1V7ENkqAtbATRAiCkL9sf9fXy",
-      "authorship_tag": "ABX9TyM6mlVV16AZyMAFXyffybYu",
+      "authorship_tag": "ABX9TyMfws14sGU5SIhl2HOzzz5e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Px30HHOq6ihg"
+      },
+      "source": [
+        "Download dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yGP9ArVErwIu"
@@ -73,6 +82,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XaDvNxT97K_X"
+      },
+      "source": [
+        "Train and test data formatting"
+      ]
     },
     {
       "cell_type": "code",
@@ -200,6 +218,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sX2VddNf7iyt"
+      },
+      "source": [
+        "Define the network"
+      ]
     },
     {
       "cell_type": "code",
